public/css/monk-widget.css
/**
 * All of the CSS on public side of the Monk_Language_Switcher widget should be
 * included in this file.
 */
.ui-selectmenu-text {
	display: inline;
	margin: 0 25px;
}

.ui-selectmenu-button {
	padding: 3px;
}

.monk-widget-option {
	background-repeat: no-repeat !important;
	padding-left: 20px;
}
.monk-widget-option .ui-icon {
	background-position: left top;
}

#monk-widget-language-selector {
	border-radius: 5px;
    width: 150px;
}

#monk-selector {
    background-color: #fff;
	border: 1px solid #ddd;
	border-radius: 5px 5px 0 0;
	height: 21px;
	margin: 0 0 0 -1px;
	min-width: 22.9%;
	position: absolute;
    z-index: 9999;
}

#monk-selector .monk-lang {
	background-color: #ddd;
	display: none;
	list-style: none;
}

#monk-selector .monk-active-lang {
	display: block;
	list-style: none;
}

.monk-active-lang {
	background-color: #fff;
}

.monk-selector-link {
	color: #001aab;
	display: block;
}

.monk-active-lang .monk-selector-link {
	color: #000;
}

.monk-selector-link:hover {
	color: #5a55ff;
}

.monk-selector-flag {
	margin-bottom: 3px;
	margin-left: 20px;
	margin-right: 10px;
	width: 16px;
}

.monk-selector-arrow {
	float: right;
	position: relative;
	right: 10px;
	top: -20px;
}

